Push de cambios de admin estado cliente

--- a/public/usuarios.html
+++ b/public/usuarios.html
@@ -43,7 +43,7 @@
       <button type="button" id="btn-cancelar" class="btn-secondary">Cancelar</button>
     </form>
 
-    <div id="loader" style="display: none; margin-top: 20px; display: flex; justify-content: center; align-items: center;">
+    <div id="loader" style="display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(253, 252, 247, 0.9); display: flex; justify-content: center; align-items: center; z-index: 999;">
       <img src="css/img/logo_original_sin_fondo.png" class="galope" style="width: 80px;" />
     </div>
     <div>
